# xm_orders

./: .editorconfig  .gitignore  Makefile  README.md  docker-compose.yaml
app/: .dockerignore  Dockerfile  Dockerfile.prod  entrypoint.sh  pyproject.toml  pytest.ini
app/accounts/: admin.py  managers.py  models.py  tests.py
app/accounts/management/commands/: create_superuser.py
app/accounts/migrations/: 0001_initial.py
app/authentication/: constants.py  models.py  serializers.py  urls.py  views.py
app/authentication/management/commands/: create_waffle_switches.py
app/authentication/migrations/: 0001_initial.py
app/authentication/tests/: test_models.py  test_serializers.py
app/drf_project/: celery.py  dashboard.py  settings.py  urls.py
app/orders/: urls.py
app/orders/features/: interface.py  models.py
app/orders/features/cancel_order/: urls.py  views.py
app/orders/features/cancel_order/tests/: test_views.py
app/orders/features/create_order/: handlers.py  serializers.py  tasks.py  urls.py  views.py
app/orders/features/create_order/tests/: conftest.py  test_handlers.py  test_serializer.py  test_tasks.py  test_views.py
app/orders/features/delete_order/: urls.py  views.py
app/orders/features/delete_order/tests/: test_views.py
app/orders/features/get_order/: urls.py  views.py
app/orders/features/get_order/tests/: conftest.py  (+1 more)
app/orders/features/get_order_status/: urls.py  views.py
app/orders/features/get_orders/: urls.py  views.py
app/orders/features/tests/: fakers.py  test_models.py
app/orders/migrations/: 0001_initial.py
(+3 files in other folders)
